force-app/main/default/objects/Contact/fields/Active_Contact__c.field-meta.xml
<CustomField>
    <fullName>Active_Contact__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Field that ,when checked, indicates that the Contact is active</description>
    <label>Active Contact</label>
    <type>Checkbox</type>
</CustomField>