force-app/main/default/objects/Contact/fields/Additional_Feedback__c.field-meta.xml
<CustomField>
    <fullName>Additional_Feedback__c</fullName>
    <label>Additional Feedback</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>