force-app/main/default/objects/Contact/fields/Additional_Relationships__c.field-meta.xml
<CustomField>
    <fullName>Additional_Relationships__c</fullName>
    <description>New field &quot;Additional Relationships&quot; - a multi-select picklist that will help define specific business interests for this contact, but not actually a new LOB. This field will initially contain only  Blockbuster and will be visible to all, but only editable by Admins.

Request from Steve Thoma 3/25 to change field label name to Solutions. API has not been updated</description>
    <inlineHelpText>Administrative Field to note additional NCR business interests</inlineHelpText>
    <label>Solutions</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Advanced Store</fullName>
            </value>
            <value>
                <fullName>Allpoint</fullName>
            </value>
            <value>
                <fullName>Aloha Cloud</fullName>
            </value>
            <value>
                <fullName>Aloha Essentials</fullName>
            </value>
            <value>
                <fullName>Aloha Kitchen</fullName>
            </value>
            <value>
                <fullName>Aloha POS</fullName>
            </value>
            <value>
                <fullName>ATMaaS</fullName>
            </value>
            <value>
                <fullName>ATM Branding</fullName>
            </value>
            <value>
                <fullName>ATM Placement</fullName>
            </value>
            <value>
                <fullName>Back Office</fullName>
            </value>
            <value>
                <fullName>Business Services Layer</fullName>
            </value>
            <value>
                <fullName>Connected Payments</fullName>
            </value>
            <value>
                <fullName>Counterpoint</fullName>
            </value>
            <value>
                <fullName>D3</fullName>
            </value>
            <value>
                <fullName>Digital Banking</fullName>
            </value>
            <value>
                <fullName>Edge Computing</fullName>
            </value>
            <value>
                <fullName>Emerald</fullName>
            </value>
            <value>
                <fullName>ENCOR</fullName>
            </value>
            <value>
                <fullName>Enterprise Software</fullName>
            </value>
            <value>
                <fullName>FastLane Self-Checkout</fullName>
            </value>
            <value>
                <fullName>Freshop</fullName>
            </value>
            <value>
                <fullName>ITM</fullName>
            </value>
            <value>
                <fullName>Managed Services</fullName>
            </value>
            <value>
                <fullName>NCR Analytics</fullName>
            </value>
            <value>
                <fullName>Optical Networking</fullName>
            </value>
            <value>
                <fullName>Payment Processor</fullName>
            </value>
            <value>
                <fullName>Professional Services</fullName>
            </value>
            <value>
                <fullName>R10</fullName>
            </value>
            <value>
                <fullName>RPOS</fullName>
            </value>
            <value>
                <fullName>SD-WAN</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>