force-app/main/default/objects/Contact/fields/Area__c.field-meta.xml
<CustomField>
    <fullName>Area__c</fullName>
    <description>Geographical sub-region where the account that a contact is aligned with is located.</description>
    <formula>if (TEXT(Account.Area__c) = &quot;&quot;, &quot;Not Specified&quot;, TEXT(Account.Area__c) )</formula>
    <inlineHelpText>The Area value is populated from the corresponding Account record and cannot be edited</inlineHelpText>
    <label>Area</label>
    <type>Text</type>
</CustomField>