force-app/main/default/objects/Contact/fields/Business_Continuity_1st_Call_Happened__c.field-meta.xml
<CustomField>
    <fullName>Business_Continuity_1st_Call_Happened__c</fullName>
    <inlineHelpText>Yes/No</inlineHelpText>
    <label>Business Continuity 1st Call Happened</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>