force-app/main/default/objects/Contact/fields/Business_Function__c.field-meta.xml
<CustomField>
    <fullName>Business_Function__c</fullName>
    <label>Business Function</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>C-Level</fullName>
            </value>
            <value>
                <fullName>CPI</fullName>
            </value>
            <value>
                <fullName>Customer Support/Service</fullName>
            </value>
            <value>
                <fullName>Digital Commerce</fullName>
            </value>
            <value>
                <fullName>Finance/Accounting</fullName>
            </value>
            <value>
                <fullName>Fraud Management</fullName>
            </value>
            <value>
                <fullName>Human Resources</fullName>
            </value>
            <value>
                <fullName>Information Technology</fullName>
            </value>
            <value>
                <fullName>Installation</fullName>
            </value>
            <value>
                <fullName>Legal</fullName>
            </value>
            <value>
                <fullName>Marketing</fullName>
            </value>
            <value>
                <fullName>NCR Ambassador</fullName>
            </value>
            <value>
                <fullName>NCR Champion</fullName>
            </value>
            <value>
                <fullName>Operations</fullName>
            </value>
            <value>
                <fullName>Other: (please specify)</fullName>
            </value>
            <value>
                <fullName>Procurement</fullName>
            </value>
            <value>
                <fullName>Project Management</fullName>
            </value>
            <value>
                <fullName>Quality/Improvement</fullName>
            </value>
            <value>
                <fullName>Research &amp; Development</fullName>
            </value>
            <value>
                <fullName>Sales</fullName>
            </value>
            <value>
                <fullName>Service Manager</fullName>
            </value>
            <value>
                <fullName>Vendor Management</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>