force-app/main/default/objects/Contact/fields/CATM_Region__c.field-meta.xml
<CustomField>
    <fullName>CATM_Region__c</fullName>
    <description>CATM</description>
    <formula>Account.CATM_Region__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CATM Region</label>
    <type>Text</type>
</CustomField>