force-app/main/default/objects/Contact/fields/Contact_Accuracy__c.field-meta.xml
<CustomField>
    <fullName>Contact_Accuracy__c</fullName>
    <description>Contact Accuracy is a 0 to 100 percent score based upon the viability of current contact information.</description>
    <label>Contact Accuracy</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>