force-app/main/default/objects/Contact/fields/Contact_Codes__c.field-meta.xml
<CustomField>
    <fullName>Contact_Codes__c</fullName>
    <inlineHelpText>Codes for marketing campaigns, mass-mailing</inlineHelpText>
    <label>Contact Codes</label>
    <type>TextArea</type>
</CustomField>