force-app/main/default/objects/Contact/fields/contact_country_code__c.field-meta.xml
<CustomField>
    <fullName>contact_country_code__c</fullName>
    <label>Contact Country Code</label>
    <length>100</length>
    <type>Text</type>
</CustomField>