force-app/main/default/objects/Contact/fields/Contact_for_Services_Invoices__c.field-meta.xml
<CustomField>
    <fullName>Contact_for_Services_Invoices__c</fullName>
    <defaultValue>false</defaultValue>
    <description>requested by LInda Sherman- sales reps should indicated contact for services related invoices</description>
    <label>Contact for Services Invoices</label>
    <type>Checkbox</type>
</CustomField>