force-app/main/default/objects/Contact/fields/Contact_Marketing_Notes__c.field-meta.xml
<CustomField>
    <fullName>Contact_Marketing_Notes__c</fullName>
    <description>To push over notes information</description>
    <label>Contact - Marketing Notes</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>