force-app/main/default/objects/Contact/fields/ContactCountry__c.field-meta.xml
<CustomField>
    <fullName>ContactCountry__c</fullName>
    <label>Contact Country</label>
    <length>100</length>
    <type>Text</type>
</CustomField>