force-app/main/default/objects/Contact/fields/Current_Role__c.field-meta.xml
<CustomField>
    <fullName>Current_Role__c</fullName>
    <label>Current Role</label>
    <length>50</length>
    <type>Text</type>
</CustomField>