force-app/main/default/objects/Contact/fields/Current_Walker_Survey_Status__c.field-meta.xml
<CustomField>
    <fullName>Current_Walker_Survey_Status__c</fullName>
    <inlineHelpText>Shows the most recent status received from Walker for the current Survey</inlineHelpText>
    <label>2017 Survey Status</label>
    <length>35</length>
    <type>Text</type>
</CustomField>