force-app/main/default/objects/Contact/fields/Date_expected_fully_back_in_business__c.field-meta.xml
<CustomField>
    <fullName>Date_expected_fully_back_in_business__c</fullName>
    <label>Date expected fully back in business</label>
    <type>Date</type>
</CustomField>