force-app/main/default/objects/Contact/fields/Decision_Maker__c.field-meta.xml
<CustomField>
    <fullName>Decision_Maker__c</fullName>
    <inlineHelpText>Contacts labeled as Not Involved will not be surveyed</inlineHelpText>
    <label>Decision Maker</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Decision Maker</fullName>
            </value>
            <value>
                <fullName>Influencer</fullName>
            </value>
            <value>
                <fullName>End User</fullName>
            </value>
            <value>
                <fullName>Not involved</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>