force-app/main/default/objects/Contact/fields/Describe_current_30_90_day_priorities__c.field-meta.xml
<CustomField>
    <fullName>Describe_current_30_90_day_priorities__c</fullName>
    <label>Describe current 30-90 day priorities</label>
    <type>TextArea</type>
</CustomField>