force-app/main/default/objects/Contact/fields/Describe_Customer_s_financial_impact__c.field-meta.xml
<CustomField>
    <fullName>Describe_Customer_s_financial_impact__c</fullName>
    <label>Describe Customer’s financial impact</label>
    <type>TextArea</type>
</CustomField>