force-app/main/default/objects/Contact/fields/Describe_key_NCR_projects_impacted__c.field-meta.xml
<CustomField>
    <fullName>Describe_key_NCR_projects_impacted__c</fullName>
    <label>Describe key NCR projects impacted</label>
    <type>TextArea</type>
</CustomField>