force-app/main/default/objects/Contact/fields/Description_of_Next_Steps__c.field-meta.xml
<CustomField>
    <fullName>Description_of_Next_Steps__c</fullName>
    <label>Description of Next Steps</label>
    <type>TextArea</type>
</CustomField>