force-app/main/default/objects/Contact/fields/Did_you_check_in_live_on_Covid_s_impact__c.field-meta.xml
<CustomField>
    <fullName>Did_you_check_in_live_on_Covid_s_impact__c</fullName>
    <label>Did you check in live on Covid’s impact?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>