force-app/main/default/objects/Contact/fields/elq_hospitality_score__c.field-meta.xml
<CustomField>
    <fullName>elq_hospitality_score__c</fullName>
    <description>This field will hold a score for each contact depending on the scoring model being used.</description>
    <inlineHelpText>This field will hold a score for each contact depending on the scoring model being used.</inlineHelpText>
    <label>elq-hospitality-score</label>
    <length>3</length>
    <type>Text</type>
</CustomField>