force-app/main/default/objects/Contact/fields/elq_last_page_visited__c.field-meta.xml
<CustomField>
    <fullName>elq_last_page_visited__c</fullName>
    <description>This field will hold information indicating the last web page a contact or, lead visited since the last autosync or, when the lead was generated.</description>
    <inlineHelpText>This field will hold information indicating the last web page a contact or, lead visited since the last autosync or, when the lead was generated.</inlineHelpText>
    <label>elq-last-page-visited</label>
    <type>Url</type>
</CustomField>