force-app/main/default/objects/Contact/fields/elq_lead_type__c.field-meta.xml
<CustomField>
    <fullName>elq_lead_type__c</fullName>
    <description>This field will drive lead notification routing. It will be updated with the type of lead that is being created.</description>
    <inlineHelpText>This field will drive lead notification routing. It will be updated with the type of lead that is being created.</inlineHelpText>
    <label>elq-lead-type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Marketing Qualified Lead</fullName>
            </value>
            <value>
                <fullName>Event Generated Lead</fullName>
            </value>
            <value>
                <fullName>Speak to Sales Request</fullName>
            </value>
            <value>
                <fullName>Contact has Marketing Activity</fullName>
            </value>
            <value>
                <fullName>Contact with Marketing Activity</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>