force-app/main/default/objects/Contact/fields/Email_Formula__c.field-meta.xml
<CustomField>
    <fullName>Email_Formula__c</fullName>
    <description>CATM Migration</description>
    <formula>Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Email_Formula</label>
    <type>Text</type>
</CustomField>