force-app/main/default/objects/Contact/fields/English_Salutation__c.field-meta.xml
<CustomField>
    <fullName>English_Salutation__c</fullName>
    <label>English Salutation</label>
    <length>30</length>
    <type>Text</type>
</CustomField>