force-app/main/default/objects/Contact/fields/Existingcon__c.field-meta.xml
<CustomField>
    <fullName>Existingcon__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Existing Contact</label>
    <type>Checkbox</type>
</CustomField>