force-app/main/default/objects/Contact/fields/Hospitality_ACR_Processing_Status__c.field-meta.xml
<CustomField>
    <fullName>Hospitality_ACR_Processing_Status__c</fullName>
    <description>Used for tracking HSR AccountContactRelations Creation Batch Job</description>
    <label>Hospitality ACR Processing Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>To Process</fullName>
            </value>
            <value>
                <fullName>Error</fullName>
            </value>
            <value>
                <fullName>Complete</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>