force-app/main/default/objects/Contact/fields/How_could_NCR_help_this_Customer__c.field-meta.xml
<CustomField>
    <fullName>How_could_NCR_help_this_Customer__c</fullName>
    <label>How could NCR help this Customer</label>
    <type>TextArea</type>
</CustomField>