force-app/main/default/objects/Contact/fields/Industry__c.field-meta.xml
<CustomField>
    <fullName>Industry__c</fullName>
    <description>Industry or industries covered by the applicable NCR Channel Account Manager (CAM)</description>
    <label>Industry</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Retail</fullName>
            </value>
            <value>
                <fullName>Financial</fullName>
            </value>
            <value>
                <fullName>Healthcare</fullName>
            </value>
            <value>
                <fullName>Travel</fullName>
            </value>
            <value>
                <fullName>Entertainment/Gaming</fullName>
            </value>
            <value>
                <fullName>Telco &amp; Tech</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>