force-app/main/default/objects/Contact/fields/IsBPMCommunityUser__c.field-meta.xml
<CustomField>
    <fullName>IsBPMCommunityUser__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To check whether user is community user or not</description>
    <label>IsBPMCommunityUser</label>
    <type>Checkbox</type>
</CustomField>