force-app/main/default/objects/Contact/fields/Key_Contact__c.field-meta.xml
<CustomField>
    <fullName>Key_Contact__c</fullName>
    <defaultValue>false</defaultValue>
    <description>CATM</description>
    <inlineHelpText>Contact is key contact that should be included in marketing initiatives.</inlineHelpText>
    <label>Key Contact?</label>
    <type>Checkbox</type>
</CustomField>