force-app/main/default/objects/Contact/fields/LeadType__c.field-meta.xml
<CustomField>
    <fullName>LeadType__c</fullName>
    <label>Lead Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>