force-app/main/default/objects/Contact/fields/Level__c.field-meta.xml
<CustomField>
    <fullName>Level__c</fullName>
    <label>Level</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Accounting</fullName>
            </value>
            <value>
                <fullName>Entry-Level Manager</fullName>
            </value>
            <value>
                <fullName>General Manager</fullName>
            </value>
            <value>
                <fullName>Individual Contributor</fullName>
            </value>
            <value>
                <fullName>Middle Manager</fullName>
            </value>
            <value>
                <fullName>Owner</fullName>
            </value>
            <value>
                <fullName>Project/Team Leader</fullName>
            </value>
            <value>
                <fullName>Sr. Exec/CXO</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
            <value>
                <fullName>Vice President/Director</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>