force-app/main/default/objects/Contact/fields/LinkedIn_Url__c.field-meta.xml
<CustomField>
    <fullName>LinkedIn_Url__c</fullName>
    <description>Provides aility to add LinkedIn URL for contacts- Requested by Gary Kemper</description>
    <label>LinkedIn Url</label>
    <type>Url</type>
</CustomField>