force-app/main/default/objects/Contact/fields/Local_Salutation__c.field-meta.xml
<CustomField>
    <fullName>Local_Salutation__c</fullName>
    <label>Local Salutation</label>
    <length>50</length>
    <type>Text</type>
</CustomField>