force-app/main/default/objects/Contact/fields/Marketing_Qualified_Contact__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Qualified_Contact__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Marketing Sourced Contact</label>
    <type>Checkbox</type>
</CustomField>