force-app/main/default/objects/Contact/fields/NCRU_Access__c.field-meta.xml
<CustomField>
    <fullName>NCRU_Access__c</fullName>
    <defaultValue>false</defaultValue>
    <label>NCRU Access</label>
    <type>Checkbox</type>
</CustomField>