force-app/main/default/objects/Contact/fields/of_Franchises__c.field-meta.xml
<CustomField>
    <fullName>of_Franchises__c</fullName>
    <label># of Franchises</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>