force-app/main/default/objects/Contact/fields/Official_Temperature__c.field-meta.xml
<CustomField>
    <fullName>Official_Temperature__c</fullName>
    <formula>TEXT(Account.Official_Temperature__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Official Temperature</label>
    <type>Text</type>
</CustomField>