force-app/main/default/objects/Contact/fields/Optin_Contact__c.field-meta.xml
<CustomField>
    <fullName>Optin_Contact__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field will be updated by Eloque. If the value is unchecked, this contact should not be communicated by any means. This field is created under GDPR request.</description>
    <label>Opt-in</label>
    <type>Checkbox</type>
</CustomField>