force-app/main/default/objects/Contact/fields/Pivotal_Contact_Id__c.field-meta.xml
<CustomField>
    <fullName>Pivotal_Contact_Id__c</fullName>
    <externalId>true</externalId>
    <label>Pivotal Contact Id</label>
    <length>18</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>