force-app/main/default/objects/Contact/fields/Portal_Login_Status__c.field-meta.xml
<CustomField>
    <fullName>Portal_Login_Status__c</fullName>
    <inlineHelpText>PRM Services</inlineHelpText>
    <label>Portal Login Status</label>
    <length>100</length>
    <type>Text</type>
</CustomField>