force-app/main/default/objects/Contact/fields/Primary_Contact_for_All_Invoices__c.field-meta.xml
<CustomField>
    <fullName>Primary_Contact_for_All_Invoices__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Requested by Linda Sherman-sales reps required to add as part of A/R collection project</description>
    <label>Primary Contact for All Invoices</label>
    <type>Checkbox</type>
</CustomField>