force-app/main/default/objects/Contact/fields/Quicklook_ID__c.field-meta.xml
<CustomField>
    <fullName>Quicklook_ID__c</fullName>
    <label>Quicklook ID</label>
    <length>15</length>
    <type>Text</type>
</CustomField>