force-app/main/default/objects/Contact/fields/Region__c.field-meta.xml
<CustomField>
    <fullName>Region__c</fullName>
    <description>Geographical region where the account that a contact is aligned with is located.</description>
    <formula>if (TEXT( Account.Region__c ) = &quot;&quot;, &quot;Not Specified&quot;, TEXT( Account.Region__c ) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The Theater  value is populated from the corresponding Account record and cannot be edited.</inlineHelpText>
    <label>Theater</label>
    <type>Text</type>
</CustomField>