force-app/main/default/objects/Contact/fields/Sales_Survey_Id__c.field-meta.xml
<CustomField>
    <fullName>Sales_Survey_Id__c</fullName>
    <label>Sales_Survey_Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>