force-app/main/default/objects/Contact/fields/Site_Name__c.field-meta.xml
<CustomField>
    <fullName>Site_Name__c</fullName>
    <inlineHelpText>Enter the name of the site that this contact is associated to - site level under the Master</inlineHelpText>
    <label>Site Name</label>
    <type>TextArea</type>
</CustomField>